added new details

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h2>Hakkımda</h2>
-    <p>Merhaba, ben Sena Nur Ataç Ankara'da yaşıyorum.</p>
+    <p>Merhaba, ben <strong>Sena Nur Ataç</strong>. Ankara'da yaşıyorum. Eğer isterseniz aşağıdaki butondan instagram hesabıma gidebilirsiniz.</p>
     <a href="https://www.instagram.com/senatac02/" target="_blank">
         <button
           style="
@@ -26,8 +26,84 @@
           Visit My Instagram
         </button>
       </a>
-    <h3>Sevdiğim Dizi ve Kitap Olan Dune</h3>
-    <p>Dune, hem kitap olarak hem de film olarak çok sevdiğim bir eser. Sizler için filmin fragmanını da alt tarafa bırakıyorum.</p>
-    <iframe width="1904" height="760" src="https://www.youtube.com/embed/8g18jFHCLXk" title="Dune | Official Main Trailer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <h3>
+        İlgi Alanlarım
+    </h3>
+    <ol>
+        <li> <strong>Anime</strong><br>
+            
+    <ul>
+        <li>
+            <a
+             href="https://www.imdb.com/title/tt9335498/"> Demon Slayer
+            </a>
+        </li>
+        <li>
+            <a 
+            href="https://www.crunchyroll.com/series/GYQ4MW246/naruto-shippuden" target="_blank">Naruto
+        </a>
+        </li>
+        <li>
+            <a 
+            href="https://www.crunchyroll.com/series/GY3VKX1MR/hunter-x-hunter">HunterxHunter
+        </a>
+        </li>
+        <li>
+            <a
+             href="https://www.imdb.com/title/tt3398540/">Haikyuu
+            </a>
+        </li>
+        
+    </ul>
+
+        </li>
+        <li><strong>Film</strong>
+<ul>
+    <li><a 
+        href="https://www.imdb.com/title/tt1160419/">Dune
+    </a>
+
+    </li>
+    <li><a 
+        href="https://www.imdb.com/title/tt0347149/">Howl's Moving Castle
+    </a>
+
+    </li>
+    <li><a
+        href="https://www.imdb.com/title/tt0434409/">V for Vendetta
+       </a>
+
+    </li>
+</ul>
+        </li>
+    <li>
+        <strong>Kitap</strong>
+        <ul>
+            <li> <a href="https://www.goodreads.com/book/show/44767458-dune">Dune</a>
+
+            </li>
+            <li>
+                Sineklerin Tanrısı 
+
+            </li>
+            <li>
+                Genç Bir Doktorun Anıları
+
+            </li>
+            <li>
+                Sofie'nin Dünyası
+
+            </li>
+        </ul>
+    </li>    
+    </ol>  
+    <h2>
+        Sevdiğim Diziler
+    </h2>
+    <h3>
+        Stranger Things
+
+    </h3> 
+    <img height="300" src="/images/strangerthings.jpg" alt="Stranger Things">
 </body>
 </html>
